# genz-colombia-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.prod  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
API_V2/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  entrypoint.sh  requirements-dev.txt  requirements.txt
API_V2/alembic/: env.py
API_V2/app/: __init__.py  database.py  main.py  models.py  schemas.py  worker.py
API_V2/docs/: ACCEPTANCE.md  AUDIT_REQUIREMENTS.md  OPERATIONS.md
API_V2/scripts/: __init__.py  bootstrap.py  integration_check.py  manage.py  run_bootstrap.py
API_V2/tests/: __init__.py  conftest.py  test_api.py  test_connector.py  test_quality.py  test_release_pipeline.py  test_security.py
alembic/: env.py
alembic/versions/: 20260613_0001_initial.py
app/: __init__.py  config.py  database.py  main.py  schemas.py  worker.py
app/api/: deps.py
app/core/: config.py  errors.py  plans.py  rate_limit.py  security.py
app/models/: api_key.py  city.py  neighborhood.py  person.py  query_log.py  subscription.py
app/schemas/: city.py  neighborhood.py  person.py  query.py
app/services/: data_generator.py  ingestion.py  market.py  quality.py  query.py  (+3 more)
scripts/: backup.sh  create_api_keys.py  create_keys.py  manage.py  restore.sh  seed_data.py
tests/: test_aggregate.py  test_cities.py  test_health.py  test_metadata.py  test_population.py
(+35 files in other folders)
