[project]
name = "genz-colombia-api-v2"
version = "2.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/worker.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
